force-app/main/default/objects/Transactions__c/Transactions__c.object-meta.xml
<CustomObject>
    <description>This object contains the details of payments, refunds, reversals, discounts, adjustments against master transaction (ElixirSuite__Payment_Transaction__c) created for a patient procedure.</description>
    <label>Transactions</label>
    <nameField>
        <displayFormat>Transaction-{0000}</displayFormat>
        <label>Transactions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>