force-app/main/default/objects/Transactions__c/fields/Master_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Master_Transaction__c</fullName>
    <label>Master Transaction</label>
    <referenceTo>Payment_Transaction__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>