force-app/main/default/objects/Transactions__c/fields/Other_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Other_Transactions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Transactions</label>
    <referenceTo>Master_Transaction__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>