force-app/main/default/objects/Transactions__c/fields/Payment_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Payment_DateTime__c</fullName>
    <label>Payment DateTime</label>
    <type>DateTime</type>
</CustomField>