force-app/main/default/objects/Transactions__c/fields/Payment_Received_By__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_By__c</fullName>
    <label>Payment Received By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
                <label>Primary Insurance</label>
            </value>
            <value>
                <fullName>Secondary Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>