force-app/main/default/objects/Transactions__c/fields/Reverse_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Reconciliation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reverse Reconciliation</label>
    <type>Checkbox</type>
</CustomField>