force-app/main/default/objects/Transactions__c/fields/Type_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Payment__c</fullName>
    <label>Type of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Payment Reverse</fullName>
            </value>
            <value>
                <fullName>Adjustment Reverse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>